--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     <footer>
       <div class="footer-text">
         Geeks Blog &copy 2022 Created with ❤️ by
-        <a target="_blank" href="https://github.com/cahyadikrishna">
-          Cahyadi Krishna
+        <a target="_blank" href="https://github.com/shandikawibawa">
+          Shandika Wibawa
         </a>
       </div>
     </footer>
