--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     <footer>
       <div class="footer-text">
-        Geeks Blog &copy 2022 Created with ❤️ by
+        Shandika Prototype Blog &copy 2022 Created with ❤️ by
         <a target="_blank" href="https://github.com/shandikawibawa">
           Shandika Wibawa
         </a>
