--- a/blog-detail.html
+++ b/blog-detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./assets/icons/gb-favicon.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <title>Geeks Blog. | See things you may dont know</title>
+    <title>Shandika Prototype Blog. | See things you may dont know</title>
   </head>
   <body>
     <header>
@@ -52,7 +52,7 @@
                 <div class="writer-img">
                   <img src="./assets/images/writer-img.jpg" alt="" />
                 </div>
-                <span>Cahyadi Krishna</span>
+                <span>Shandika Wibawa</span>
                 |
                 <span>Saturday, 11 June 2022</span>
                 |
@@ -182,9 +182,9 @@
                 </div>
 
                 <div class="profile-info">
-                  <h1>Cahyadi Krishna</h1>
+                  <h1>Shandika Wibawa</h1>
                   <p>
-                    Hello everyone 👋, I am Cahyadi Krishna. I am a student
+                    Hello everyone 👋, I am Kadek Shandika Wibawa. I am a student
                     majoring in Information Systems from Bali. I love coding and
                     UI design. My hobby is playing games
                   </p>
@@ -228,7 +228,7 @@
 
     <footer>
       <div class="footer-text">
-        Geeks Blog &copy 2022 Created with ❤️ by
+        Shandika Prototype Blog &copy 2022 Created with ❤️ by
         <a target="_blank" href="https://github.com/cahyadikrishna">
           Cahyadi Krishna
         </a>
