--- a/blog-detail.html
+++ b/blog-detail.html
@@ -229,8 +229,8 @@
     <footer>
       <div class="footer-text">
         Shandika Prototype Blog &copy 2022 Created with ❤️ by
-        <a target="_blank" href="https://github.com/cahyadikrishna">
-          Cahyadi Krishna
+        <a target="_blank" href="https://github.com/shandikawibawa">
+          Shandika Wibawa
         </a>
       </div>
     </footer>
